--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -34,7 +34,7 @@ input{
     border: none;
     border-radius: 0.5rem;
     outline: 0;
-    background-color: var(--color-white);
+    background-color: var(--color-grey-2);
 }
 
 input::placeholder{
@@ -51,7 +51,7 @@ input::placeholder{
 }
 
 .number{
-    background-color: var(--color-white);
+    background-color: var(--color-grey-2);
     height: 31px;
     padding: 0.25rem 0.5rem 0.29rem 0;
     border-radius: 0 0.5rem 0.5rem 0;
@@ -77,6 +77,7 @@ select{
     max-width: 100%;
     border: none;
     border-radius: 0.5rem;
+    background-color: var(--color-grey-2);
     color: var(--color-grey-3);
     font-size: 0.75rem;
     font-weight: 400;
