--- a/src/components/IndexPage/style.css
+++ b/src/components/IndexPage/style.css
@@ -1,10 +1,18 @@
 .index__page{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--color-grey-4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.all{
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: var(--color-grey-4);
 }
 
 h1{
@@ -64,8 +72,11 @@ h1{
     color: var(--color-pink);
 }
 
-@media (max-width: 425px){
-    .image__info img{
+@media (max-width: 760px){
+    .image__info img {
+        display: none;
+    }
+    .image__info {
         display: none;
     }
 }
